--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "react-paginate": "^8.2.0",
     "react-slick": "^0.30.2",
     "sass": "^1.77.6",
     "sharp": "^0.33.4",
